refactore: se implementa sickyheader

--- a/Slider/index.html
+++ b/Slider/index.html
@@ -5,13 +5,26 @@
 </head>
 
 <body>
-    <!-- Título principal de la página -->
-    <h1>Carrousel / Slider</h1>   
+    <!-- Se crea el navbar con stickyheader-->
+    <header>
+        <div class="contenedor">
+            <h1>Logo</h1>
+
+            <nav>
+                <a href="#"> Inicio</a>
+                <a href="#"> Servicios</a>
+                <a href="#"> Contacto</a>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Espacio -->
+    <br><br><br><br><br><br>
+
     <section class="container">
 
         <!-- Contenedor principal del slider -->
         <div class="slider-wrapper">
-
             <!-- Contenedor de las imágenes del slider -->
             <div class="slider">
                 <!-- Cada imagen representa una diapositiva del slider. 
@@ -29,6 +42,8 @@
             </div>
         </div>
     </section>
+
+    
 </body>
 </html>
 
