--- a/Manifiesto de Diseño/index.html
+++ b/Manifiesto de Diseño/index.html
@@ -47,6 +47,17 @@
                         
                         <p>Nuestro enfoque combina estética minimalista con arquitectura sólida, logrando productos que no solo impactan visualmente, sino que resisten el paso del tiempo.</p>
 
+                    </div>
+                    
+                    <section class="galeria">
+                        <img src="recurse/galeria-1.jpg" alt="Galería de imagenes">
+                        <img src="recurse/galeria-2.jpg" alt="Galería de imagenes">
+                        <img src="recurse/galeria-3.jpg" alt="Galería de imagenes">
+                        <img src="recurse/galeria-4.jpeg" alt="Galería de imagenes">
+                        <img src="recurse/galeria-5.jpeg" alt="Galería de imagenes">
+                        <img src="recurse/galeria-6.jpeg" alt="Galería de imagenes">
+                    </section>
+                    <div class="texto-secundario">
                         <p>No solo creamos sitios web; construimos ecosistemas digitales que aprenden, evolucionan y conectan con tu audiencia de manera orgánica y eficiente.</p>
 
                         <p>Innovación constante: Exploramos las fronteras de lo posible para ofrecer soluciones que hoy parecen ciencia ficción.</p>
